feat: implement the singlylinkedlist functionalities: isEmpty, prepend, append, setHead, access, insert, remove and print

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "practice data structure",
   "main": "index.js",
   "scripts": {
-    "test": "jest src/list/arrayList.test.js"
+    "test": "jest src/list/singlyLinkedList.test.js"
   },
   "repository": {
     "type": "git",
